# open-py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __main__.py  install.sh  nuke.sh  openpy.toml.example  pyproject.toml  requirements-full.txt  requirements.txt  tmp_index.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: __init__.py  base.py  factory.py  registry.py
cli/: repl.py  setup.py
core/: __init__.py  audit_log.py  auto_learner.py  brain.py  cortex.py  engine.py  feedback_loop.py  lifecycle.py  message_queue.py  neural.py  orchestrator.py  pipeline.py  rate_limiter.py  sandbox.py  validator.py
data/: CRITICAL_ACTIONS.md  core_identity.json  essence.md  essence.md.example  soul.md  soul.md.example
doctor/: __init__.py  diagnostics.py
mcp/: client.py
memory/: __init__.py  extractor.py  manager.py  skill_store.py
providers/: __init__.py  router.py
scheduler/: __init__.py  manager.py
scripts/: doctor-heal.sh  openpy-doctor.cron  openpy.service
shared/: __init__.py  config.py  exceptions.py  logger.py  migrations.py  models.py
telegram_bot/: __init__.py  bot.py  updater.py
tools/: __init__.py  browser.py  documents.py  output_cleaner.py  python_exec.py  registry.py  schemas.py  system.py
voice/: __init__.py  engine.py
